fix docker file, docker-compose file and server port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,13 @@ services:
       context: ./
       dockerfile: Dockerfile
     tty: true
-    volumes: 
-      - ./:/app
+    ports:
+      - 8000:8000
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
       POSTGRES_URL: postgresql
+    entrypoint: cargo run
 
   postgresql:
     image: postgres:10.5
